name:          semigroups
category:      Algebra, Data, Data Structures, Math
version:       0.14
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/semigroups/
bug-reports:   http://github.com/ekmett/semigroups/issues
copyright:     Copyright (C) 2011-2014 Edward A. Kmett
synopsis:      Anything that associates
description:
    In mathematics, a semigroup is an algebraic structure consisting of a set together with an associative binary operation. A semigroup generalizes a monoid in that there might not exist an identity element. It also (originally) generalized a group (a monoid with all inverses) to a type where every element did not have to have an inverse, thus the name semigroup.
build-type:    Simple
extra-source-files: .travis.yml README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/semigroups.git

flag hashable
  default: True
  manual: True

flag bytestring
  default: True
  manual: True

flag containers
  default: True
  manual: True

flag text
  default: True
  manual: True

flag unordered-containers
  default: True
  manual: True

library
  default-language: Haskell98

  if impl(ghc >= 7.4 && < 7.5)
    build-depends: ghc-prim

  if flag(bytestring)
    build-depends: bytestring >= 0.9 && < 1

  if flag(containers)
    build-depends: containers >= 0.3 && < 0.6

  if flag(text)
    build-depends: text >= 0.10 && < 2

  if flag(hashable) || flag(unordered-containers)
    build-depends: hashable >= 1.1  && < 1.3

  if flag(unordered-containers)
    build-depends: unordered-containers >= 0.2  && < 0.3

  build-depends:
    base >= 2   && < 5,
    nats >= 0.1 && < 1

  hs-source-dirs: src
  ghc-options:    -Wall

  exposed-modules:
    Data.Semigroup
    Data.List.NonEmpty
